--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,3 +19,12 @@ jobs:
           node-version: 16
       - run: yarn install
       - run: yarn lint
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - run: yarn install
+      - run: yarn build
