--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: server/app
     container_name: baba_backend
     environment:
+      DBHOST: baba_database
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGPASSWORD: ${PGPASSWORD}
@@ -34,8 +35,6 @@ services:
       PGPASSWORD: ${PGPASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       TZ: ${TZ}
-    ports:
-      - 5432:5432
     networks:
       - server
 
