--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint \"{server,web}/**/{src,apps,libs,test}/**/*.ts\" --fix"
+  },
+  "lint-staged": {
+    "*.{js,ts,md,yml,html,css}":["prettier --write"],
+    "*.{js,ts}":["eslint --fix"]
   }
 }
