--- a/web/app/package.json
+++ b/web/app/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
