--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "lint": "eslint \"{server,web}/**/{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "lint-staged": {
-    "*.{js,ts,md,yml,html,css}":["prettier --write"],
-    "*.{js,ts}":["eslint --fix"]
+    "*.{js,ts,md,yml,html,json,css}": [
+      "prettier --write"
+    ],
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
   }
 }
