--- a/web/app/package.json
+++ b/web/app/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@roxi/routify": "^2.18.8",
+    "@roxi/routify": "^2.18.2",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -26,6 +26,7 @@
     "prettier": "^2.8.1",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
+    "svelte-material-ui": "6.1.4",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.0",
