--- a/web/app/package.json
+++ b/web/app/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "prepare": "smui-theme compile dist/smui.css -i src/theme"
   },
   "devDependencies": {
     "@roxi/routify": "^2.18.2",
@@ -24,6 +25,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
+    "smui-theme": "^6.1.4",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-material-ui": "6.1.4",
