--- a/web/app/package.json
+++ b/web/app/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "routify -c dev:vite ",
+    "dev": "routify -c dev:vite",
     "build": "svelte-check && routify -b && vite build",
     "dev:vite": "vite",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "smui-theme compile dist/smui.css -i src/theme"
+    "prepare": "npm run smui-theme",
+    "smui-theme": "smui-theme compile dist/smui.css -i src/theme"
   },
   "devDependencies": {
     "@roxi/routify": "^2.18.2",
