--- a/web/app/package.json
+++ b/web/app/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "routify -c dev:vite",
-    "build": "svelte-check && routify -b && vite build",
+    "build": "svelte-check && routify -b && vite build && npm run smui-theme-build",
     "dev:vite": "vite",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "npm run smui-theme",
-    "smui-theme": "smui-theme compile dist/smui.css -i src/theme"
+    "prepare": "npm run smui-theme-prepare",
+    "smui-theme-prepare": "smui-theme compile public/smui.css -i src/theme",
+    "smui-theme-build": "smui-theme compile dist/smui.css -i src/theme"
   },
   "devDependencies": {
     "@roxi/routify": "^2.18.2",
