[fix] fix arm64 backend container

--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -15,7 +15,7 @@ services:
   backend:
     build:
       context: server/app
-      target: develop
+      target: prepare
       dockerfile: Dockerfile.local
     volumes:
       - "./server/app:/server"
