--- a/server/app/Dockerfile.local
+++ b/server/app/Dockerfile.local
@@ -1,10 +1,8 @@
 # prepare
+# make,python3,g++ -> node-gyp required
 FROM node:16.13.1-slim AS prepare
 WORKDIR /server
-
-# develop
-ENV LIB="git curl wget"
-FROM prepare AS develop
+ENV LIB="git curl wget make python3 g++"
 RUN apt update \
   && apt install -y $LIB --no-install-recommends
 
