[fix] fix backend containers

--- a/server/app/Dockerfile.local
+++ b/server/app/Dockerfile.local
@@ -9,7 +9,7 @@ RUN apt update \
 # build
 FROM prepare AS builder
 COPY package.json yarn.lock ./
-RUN yarn install --prod --frozen-lockfile
+RUN yarn install --frozen-lockfile
 COPY . .
 RUN yarn build
 
