--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -23,3 +23,7 @@ services:
       bash -c "yarn install && yarn run start"
     ports:
       - "3000:3000"
+
+  database:
+    ports:
+      - "5432:5432"
