--- a/web/Dockerfile.local
+++ b/web/Dockerfile.local
@@ -10,7 +10,7 @@ RUN apt update \
 FROM prepare AS builder
 RUN mkdir public
 COPY app/package.json app/yarn.lock ./
-RUN yarn install
+RUN yarn install --network-timeout 180000
 COPY app ./
 RUN yarn build
 
