--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /svelte_app
 ENV LIB="git curl wget make python3 g++"
 RUN apt update \
   && apt install -y $LIB --no-install-recommends
-RUN mkdir public
+COPY app/src/theme ./src/theme
 COPY app/package.json app/yarn.lock ./
 RUN yarn install
 COPY app ./
