--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,6 +5,11 @@ on:
     paths:
       - "server/app/**"
       - ".github/workflows/backend.yml"
+  pull_request:
+    types: [opened, reopened, synchronize, review_requested]
+    paths:
+      - "server/app/**"
+      - ".github/workflows/backend_container.yml"
 
 defaults:
   run:
