--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -18,6 +18,11 @@ defaults:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    if: >-
+      ${{
+        github.event.action != 'synchronize' ||
+        github.run_attempt != 1
+      }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
@@ -25,8 +30,14 @@ jobs:
           node-version: 16
       - run: yarn install
       - run: yarn lint
+
   build:
     runs-on: ubuntu-latest
+    if: >-
+      ${{
+        github.event.action != 'synchronize' ||
+        github.run_attempt != 1
+      }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
