--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - "server/app/**"
+      - "!server/app/Dockerfile**"
       - ".github/workflows/backend.yml"
   pull_request:
     types: [opened, reopened, synchronize, review_requested]
