--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "eslint": "^8.29.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
