--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "lint": "eslint \"{server,web}/**/{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{server,web}/**/{src,apps,libs,test}/**/*.ts\" --fix",
+    "all:install": "yarn install && yarn --cwd web/app install && yarn --cwd server/app install",
+    "all:dev": "run-p dev:*",
+    "dev:web": "yarn --cwd web/app dev",
+    "dev:server": "yarn --cwd server/app start:dev"
   },
   "lint-staged": {
     "*.{js,ts,md,yml,html,json,css}": [
