--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint \"{server,web}/**/{src,apps,libs,test}/**/*.ts\" --fix",
-    "all:install": "yarn install && yarn --cwd web/app install && yarn --cwd server/app install",
-    "all:dev": "run-p dev:*",
+    "all-install": "yarn install && yarn --cwd web/app install && yarn --cwd server/app install",
+    "all-dev": "run-p dev:* \"db up\"",
+    "postall-dev": "db:stop",
     "dev:web": "yarn --cwd web/app dev",
-    "dev:server": "yarn --cwd server/app start:dev"
+    "dev:server": "yarn --cwd server/app start:dev",
+    "db": "docker-compose -f docker-compose.db.yml"
   },
   "lint-staged": {
     "*.{js,ts,md,yml,html,json,css}": [
