--- a/web/app/package.json
+++ b/web/app/package.json
@@ -36,6 +36,7 @@
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.0",
+    "type-fest": "^3.3.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
