--- a/web/app/package.json
+++ b/web/app/package.json
@@ -11,26 +11,39 @@
     "dev:vite-docker": "vite --host",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "lint": "eslint \"{src,apps,libs,test}/**/*{.ts,.svelte}\" --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint --ignore-path .gitignore './**/*.{ts,js,json,svelte}'",
+    "lint:fix": "eslint --ignore-path .gitignore './**/*.{ts,js,json,svelte}' --fix",
+    "format": "prettier --write --ignore-path .gitignore './**/*.{ts,js,json,svelte}'",
     "prepare": "npm run smui-theme-prepare",
     "smui-theme-prepare": "smui-theme compile public/smui.css -i src/theme",
     "smui-theme-build": "smui-theme compile dist/smui.css -i src/theme"
   },
   "devDependencies": {
     "@roxi/routify": "^2.18.2",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-svelte": "^2.31.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
+    "postcss-html": "^1.5.0",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.10.1",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "smui-theme": "^6.1.4",
+    "stylelint": "^15.9.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.2.0",
+    "stylelint-config-standard": "^33.0.0",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-material-ui": "6.1.4",
