ルールの見直し

--- a/server/app/package.json
+++ b/server/app/package.json
@@ -12,9 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint --ignore-path .gitignore './**/*.{ts,js,json}'",
-    "lint:fix": "eslint --ignore-path .gitignore './**/*.{ts,js,json}' --fix",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{ts,js,json}'",
+    "lint": "eslint --ignore-path .gitignore **/*.{ts,js,json}",
+    "lint:fix": "eslint --ignore-path .gitignore **/*.{ts,js,json} --fix",
+    "format": "prettier --write --ignore-path .gitignore **/*.{ts,js,json}",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
