--- a/web/app/package.json
+++ b/web/app/package.json
@@ -11,9 +11,9 @@
     "dev:vite-docker": "vite --host",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "lint": "eslint --ignore-path .gitignore './**/*.{ts,js,json,svelte}'",
-    "lint:fix": "eslint --ignore-path .gitignore './**/*.{ts,js,json,svelte}' --fix",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{ts,js,json,svelte}'",
+    "lint": "eslint --ignore-path .gitignore ./**/*.{ts,js,json,svelte}",
+    "lint:fix": "eslint --ignore-path .gitignore ./**/*.{ts,js,json,svelte} --fix",
+    "format": "prettier --write --ignore-path .gitignore ./**/*.{ts,js,json,svelte}",
     "prepare": "npm run smui-theme-prepare",
     "smui-theme-prepare": "smui-theme compile public/smui.css -i src/theme",
     "smui-theme-build": "smui-theme compile dist/smui.css -i src/theme"
@@ -22,7 +22,6 @@
     "@roxi/routify": "^2.18.2",
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
