--- a/web/app/package.json
+++ b/web/app/package.json
@@ -57,6 +57,7 @@
     "@felte/validator-zod": "^0.3.3",
     "dayjs": "^1.11.7",
     "felte": "^1.2.6",
+    "papaparse": "^5.4.1",
     "svelte-steps": "^2.4.1",
     "zod": "^3.9.8"
   }
