--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -2,11 +2,10 @@ server {
     listen 80;
     server_name _;
 
-    root  /var/www/html;
-    index index.html;
-
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
+
+    client_max_body_size 20M;
   
     location /api/ {
       proxy_pass http://baba_backend:3000/;
@@ -18,5 +17,10 @@ server {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-}
 
+    location / {
+      root  /var/www/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+}
